mild restructuring of site
moved all site contents into docs folder for github pages, pushing to test images, css, etc

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,7 +30,7 @@ plugins:
   - jekyll-feed
 defaults:
   - scope:
-    path: "_assets/images"
+      path: "assets/img"
     values:
       image: true
 
