--- a/temp_docs/_config.yml
+++ b/temp_docs/_config.yml
@@ -32,9 +32,11 @@ plugins:
   - jekyll-sitemap
 defaults:
   - scope:
-      path: "assets/img"
+      path: "/assets/img"
     values:
       image: true
+error_mode: warn
+timezone: America/New_York
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
