--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,11 +28,15 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-sitemap
 defaults:
   - scope:
-      path: "assets/img"
+      path: "/assets/img"
     values:
       image: true
+error_mode: warn
+timezone: America/New_York
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
