--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -15,8 +15,9 @@
 # in the templates via {{ site.myvariable }}.
 title: SmashRanks
 email: iago@smashranks.com
+support_email: support@smashranks.com
 description: >- # this means to ignore newlines until "baseurl:"
-  A website for aggregating competitive Super Smash Bros. Results and Rankings.
+  A smash.gg data analytics resource and database.
   Under construction. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://smashranks.com" # the base hostname & protocol for your site, e.g. http://example.com
